--- a/README
+++ b/README
@@ -2,38 +2,34 @@ Python-tesseract is an optical character recognition (OCR) tool for python.
 That is, it will recognize and "read" the text embedded in images.
 
 Python-tesseract is a wrapper for google's Tesseract-OCR
-( http://code.google.com/p/tesseract-ocr/ ).  It is also useful as a
-stand-alone invocation script to tesseract, as it can read all image types
+( http://code.google.com/p/tesseract-ocr/ ). It can read all image types
 supported by the Python Imaging Library, including jpeg, png, gif, bmp, tiff,
-and others, wheras tesseract-ocr by default only supports tiff and bmp.
-Additionally, if used as a script, Python-tesseract will print the recognized
-text in stead of writing it to a file. Support for confidence estimates and
-bounding box data is planned for future releases.
-
+and others, whereas tesseract-ocr alone only supports tiff and bmp by default.
+It also support bounding box data. Support for confidence estimates is planned
+for future releases.
 
 USAGE:
-From the shell:
- $ ./tesseract.py test.png                  # prints recognized text in image
- $ ./tesseract.py -l fra test-european.jpg  # recognizes french text
-In python:
  > import Image
  > from tesseract import image_to_string
  > print image_to_string(Image.open('test.png'))
  > print image_to_string(Image.open('test-european.jpg'), lang='fra')
 
-
-INSTALLATION:
+DEPENDENCIES:
 * Python-tesseract requires python 2.5 or later.
 * You will need the Python Imaging Library (PIL).  Under Debian/Ubuntu, this is
   the package "python-imaging".
 * Install google tesseract-ocr from http://code.google.com/p/tesseract-ocr/ .
   You must be able to invoke the tesseract command as "tesseract". If this
   isn't the case, for example because tesseract isn't in your PATH, you will
-  have to change the "tesseract_cmd" variable at the top of 'tesseract.py'.
+  have to change the "TESSERACT_CMD" variable at the top of 'tesseract.py'.
+  Python-tesseract is tested with Tesseract >= 3.01 only.
 
+INSTALLATION:
+$ sudo python ./setup.py install
 
 COPYRIGHT:
 Python-tesseract is released under the GPL v3.
 Copyright (c) Samuel Hoffstaetter, 2009
-http://wiki.github.com/hoffstaetter/python-tesseract
+Copyright (c) Jerome Flesch, 2011
+http://wiki.github.com/jflesch/python-tesseract
 
