--- a/README
+++ b/README
@@ -1,44 +1,48 @@
-Python-tesseract is an optical character recognition (OCR) tool for python.
-That is, it will recognize and "read" the text embedded in images.
+Pyocr is an optical character recognition (OCR) tool wrapper for python.
+That is, it helps using OCR tools from Python.
 
-Python-tesseract is a wrapper for google's Tesseract-OCR
-( http://code.google.com/p/tesseract-ocr/ ). It can read all image types
-supported by the Python Imaging Library, including jpeg, png, gif, bmp, tiff,
+Pyocr can be used as a wrapper for google's Tesseract-OCR
+( http://code.google.com/p/tesseract-ocr/ ) or Cuneiform. It can read all image
+types supported by the Python Imaging Library, including jpeg, png, gif, bmp, tiff,
 and others, whereas tesseract-ocr alone only supports tiff and bmp by default.
-It also support bounding box data. Support for confidence estimates is planned
-for future releases.
+It also support bounding box data.
 
 USAGE:
- > import Image
- > from tesseract import image_to_string
- > print image_to_string(Image.open('test.png'))
- > print image_to_string(Image.open('test-european.jpg'), lang='fra')
+import Image
+import sys
+from pyocr import pyocr
+
+tools = pyocr.get_available_tools()[:]
+if len(tools) == 0:
+    print "No OCR tool found"
+    sys.exit(1)
+print "Using '%s'" % (tools[0].get_name())
+tools[0].image_to_string(Image.open('test.png'), lang='fra',
+                         builder=TextBuilder())
 
 DEPENDENCIES:
-* Python-tesseract requires python 2.5 or later.
+* Pyocr requires python 2.5 or later.
 * You will need the Python Imaging Library (PIL).  Under Debian/Ubuntu, this is
   the package "python-imaging".
-* Install google tesseract-ocr from http://code.google.com/p/tesseract-ocr/ .
-  You must be able to invoke the tesseract command as "tesseract". If this
-  isn't the case, for example because tesseract isn't in your PATH, you will
-  have to change the "TESSERACT_CMD" variable at the top of 'tesseract.py'.
-  Python-tesseract is tested with Tesseract >= 3.01 only.
+* Install an OCR:
+  * tesseract-ocr from http://code.google.com/p/tesseract-ocr/ .
+    You must be able to invoke the tesseract command as "tesseract".
+    Python-tesseract is tested with Tesseract >= 3.01 only.
+  * or cuneiform
 
 INSTALLATION:
 $ sudo python ./setup.py install
 
 TESTS:
-* Tests are made to be run with the latest versions of Tesseract. The first
-  test verifies that you're using the expected version.
-* Most tests simply call Tesseract using tesseract.py and compre the output
-  to reference files:
-  * test.png --> test.txt / test.box / ...
-  * test-european.jpg --> test.txt / test.box / ...
-  * ...
+Tests are made to be run with the latest versions of Tesseract and Cuneiform.
+the first test verifies that you're using the expected version.
 
 COPYRIGHT:
-Python-tesseract is released under the GPL v3.
-Copyright (c) Samuel Hoffstaetter, 2009
-Copyright (c) Jerome Flesch, 2011
+Pyocr is released under the GPL v3.
+tesseract.py:
+  Copyright (c) Samuel Hoffstaetter, 2009
+  Copyright (c) Jerome Flesch, 2011-2012
+other files:
+  Copyright (c) Jerome Flesch, 2011-2012
 http://wiki.github.com/jflesch/python-tesseract
 
