--- a/README
+++ b/README
@@ -1,6 +1,8 @@
 Pyocr is an optical character recognition (OCR) tool wrapper for python.
 That is, it helps using OCR tools from a Python program.
 
+It works only on GNU/Linux systems.
+
 Pyocr can be used as a wrapper for google's Tesseract-OCR
 ( http://code.google.com/p/tesseract-ocr/ ) or Cuneiform. It can read all image
 types supported by the Python Imaging Library, including jpeg, png, gif, bmp, tiff,
@@ -37,7 +39,7 @@ Tests are made to be run with the latest versions of Tesseract and Cuneiform.
 the first test verifies that you're using the expected version.
 
 COPYRIGHT:
-Pyocr is released under the GPL v3.
+Pyocr is released under the GPL v3+.
 tesseract.py:
   Copyright (c) Samuel Hoffstaetter, 2009
   Copyright (c) Jerome Flesch, 2011-2012
