--- a/README
+++ b/README
@@ -1,7 +1,8 @@
 Pyocr is an optical character recognition (OCR) tool wrapper for python.
 That is, it helps using OCR tools from a Python program.
 
-It works only on GNU/Linux systems.
+It has been tested only on GNU/Linux systems. It should also work on similar
+systems (*BSD, etc). It doesn't work on Windows, MacOSX, etc.
 
 Pyocr can be used as a wrapper for google's Tesseract-OCR
 ( http://code.google.com/p/tesseract-ocr/ ) or Cuneiform. It can read all image
