--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+v0.1.2 --> 0.2:
+* Python 3.x support
+
 v0.1.1 --> v0.1.2:
 * Tesseract: Fix version parsing
 * Tesseract: Fix Tesseract 3.02.01's hOCR format support
+
+v0.1 --> v0.1.1:
+* hOCR: Parse lines as well as words
+* tesseract.get_available_languages() : Fix fedora support
+* Fix UTF-8 support
