--- a/AUTHORS
+++ b/AUTHORS
@@ -1,9 +1,12 @@
 $ git shortlog -sne >| AUTHORS
 
-   145	Jerome Flesch <jflesch@gmail.com>
+   162	Jerome Flesch <jflesch@gmail.com>
     12	Samuel Hoffstaetter <samuel@hoffstaetter.com>
+    10	Jerome Flesch <jflesch@wyplay.com>
+     7	Jerome Flesch <jerome.flesch@netasq.com>
      6	Paulo Miguel Almeida <paulo.ubuntu@gmail.com>
      3	hoffstaetter <samuel@hoffstaetter.com>
+     2	Chanwoong Kim <devk0817@gmail.com>
      2	Ross Vandegrift <ross@kallisti.us>
      1	Bernard Cafarelli <bernard.cafarelli@gmail.com>
      1	Gian Luca Dalla Torre <gianluca@gestionaleauto.com>
