--- a/AUTHORS
+++ b/AUTHORS
@@ -5,6 +5,7 @@ $ git shortlog -sne >| AUTHORS
     10	Jerome Flesch <jflesch@wyplay.com>
      7	Jerome Flesch <jerome.flesch@netasq.com>
      6	Paulo Miguel Almeida <paulo.ubuntu@gmail.com>
+     3	Teis <https://github.com/TeisD>
      3	hoffstaetter <samuel@hoffstaetter.com>
      2	Chanwoong Kim <devk0817@gmail.com>
      2	Ross Vandegrift <ross@kallisti.us>
